# SeaForge

./: .gitignore  Cargo.toml  README.md  demo_output.json  package-lock.json  pyproject.toml
benchmarks/: README.md  benchmark_engine.py  benchmark_monte_carlo.py
data/: ocean_grid.meta.json
docs/: allowed_parameters.json
examples/: demo_basic.py  monte_carlo_demo.py  optimizer_output.json  result_basic.json  scenario_basic.json  search_space.json  sim_output.json  simulation_params.json  vessel_config.json  voyage_route.json
gemini_runner/: README.md  config.js  run_gemini_simulations.js
mission-briefs/: 01_north_atlantic_sprint.json  02_cape_horn_transit.json  03_persian_gulf_patrol.json  04_bering_sea_crossing.json  05_pacific_fuel_run.json  06_south_china_sea_sweep.json  custom_southern_hemisphere_trade.json
ship_sim/: __init__.py  _math.py  config.py  units.py  visualization.py
ship_sim/acceleration/: __init__.py  backend.py
ship_sim/examples/: __init__.py  demo_basic.py  monte_carlo_demo.py
ship_sim/generation/: __init__.py  procedural.py
ship_sim/gui/: __init__.py  builders.py  route_map.py  streamlit_app.py
ship_sim/io/: __init__.py  scenario_loader.py  scenario_writer.py
ship_sim/models/: __init__.py  environment.py  materials.py  results.py  scenario.py  ship.py  trajectory.py  waves.py  (+1 more)
src/: lib.rs  main.rs
tests/: test_acceleration.py  test_corrosion.py  test_engine.py  test_gui_builders.py  test_io.py  test_materials.py  test_math.py  test_monte_carlo.py  test_procedural.py  test_reports.py  test_route_map.py  test_stability.py  test_trajectory.py  test_trajectory_interp.py  test_units.py  test_visualization.py
tools/: generate_ocean_grid.py
ui/: demo_optimization.json  index.html  package-lock.json  package.json  server.js
(+41 files in other folders)
