[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ship_sim"
version = "0.1.0"
description = "Modular ship corrosion, structural degradation, and stability-risk simulation (engineering approximation)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
accel = ["numba>=0.58"]

[tool.setuptools.packages.find]
include = ["ship_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
