[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ship_sim"
version = "0.1.0"
description = "Modular ship corrosion, structural degradation, and stability-risk simulation (engineering approximation)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "matplotlib>=3.5"]
viz = ["matplotlib>=3.5"]
# streamlit pinned < 1.40: streamlit-drawable-canvas's frontend bundle does not
# render on newer Streamlit (its component protocol changed). The image_to_url
# compatibility shim in streamlit_app.py covers newer Streamlit if you override.
gui = ["streamlit>=1.30,<1.40", "matplotlib>=3.5", "pandas>=1.5", "streamlit-drawable-canvas>=0.9", "pillow>=9"]
accel = ["numba>=0.58"]

[tool.setuptools.packages.find]
include = ["ship_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
